[tool.black]
line_length = 79
target_version = ["py37"]

[tool.coverage.run]
branch = true
source = ["psychrochartweb"]

[tool.coverage.paths]
source = ["psychrochartweb/"]

[tool.coverage.report]
fail_under = 60
skip_covered = true
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == \"__main__\":",
    "raise NotImplementedError",
]

[tool.poetry]
name = "psychrochartweb"
version = "0.1.0"
description = "Psycrochart webcam for Home Assistant"
authors = ["Eugenio Panadero <eugenio.panadero@gmail.com>"]
packages = [{ include = "psychrochartweb" }]
readme = "README.md"
repository = "https://github.com/azogue/psychrochartweb"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
aiohttp = ">=3.6"
aiojobs = ">=0.2.2"
attrs = ">=19.3"
envparse = ">=0.2.0"
psychrochart = "0.3.1"
yarl = ">=1.0"
"ruamel.yaml" = ">=0.16.5"
uvloop = ">=0.14.0"
cattrs = ">=1.0.0"
scipy = ">=1.3.3"
matplotlib = ">=3.1.2"

[tool.poetry.dev-dependencies]
coverage = {extras = ["toml"], version = ">=5.0.3"}
pytest = ">=5.1"
pytest-aiohttp = ">=0.3.0"
pytest-cov = ">=2.7"
pytest-env = ">=0.6.2"
pytest-sugar = ">=0.9.2"
pytest-asyncio = "^0.19.0"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
