[tool.ruff]
target-version = "py311"
fix = true
line-length = 79

[tool.ruff.lint]
select = ["A", "ARG", "ASYNC", "B", "BLE", "C", "C4", "E", "F", "FA", "I", "INT", "N", "PIE", "PTH", "RUF", "SIM", "TCH", "TD", "W", "YTT"]
ignore = ["B008", "B904", "B905", "TD002", "TD003", "TD004", "RUF012"]

[tool.ruff.lint.isort]
known-first-party = ["psychrochartweb"]
order-by-type = false

[tool.mypy]
plugins = ["pydantic.mypy"]

follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
#disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

# for strict mypy: (this is the tricky one :-))
# disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true


[tool.coverage.run]
source = ["psychrochartweb"]

[tool.coverage.paths]
source = ["psychrochartweb/"]

[tool.coverage.report]
fail_under = 60
skip_covered = true
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == \"__main__\":",
    "raise NotImplementedError",
]
omit = [
    "psychrochartweb/__main__.py",
]

[tool.pytest.ini_options]
minversion = 7.0
testpaths = "tests"
addopts = "-vv -s --cov --cov-report term --cov-report html"
log_cli = true
log_cli_format = "%(asctime)s.%(msecs)03d %(name)s: %(lineno)s %(levelname)s: %(message)s"
log_cli_level = "INFO"
asyncio_mode = "auto"
markers = [
    "local_access: Requires HA connection",
]
filterwarnings = [
    # TODO fix this `Calling gca() with keyword arguments was deprecated in Matplotlib 3.4`
    "ignore::DeprecationWarning",
#    'ignore:MatplotlibDeprecationWarning*:DeprecationWarning',
]
env = [
    "D:LOGGING_LEVEL=INFO",
]

[tool.poetry]
name = "psychrochartweb"
version = "0.2.0"
description = "Psycrochart webcam for Home Assistant"
authors = ["Eugenio Panadero <eugenio.panadero@gmail.com>"]
packages = [{ include = "psychrochartweb" }]
readme = "README.md"
repository = "https://github.com/azogue/psychrochartweb"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = ">=0.108.0"
uvicorn = ">=0.25.0"
uvloop = ">=0.19.0"
pydantic = ">=2.5.2"
pydantic-settings = ">=2.1.0"
pydantic-extra-types = ">=2.1.0"
python-dotenv = ">=0.21.0"
psychrochart = "0.3.1"
scipy = ">=1.3.3"
matplotlib = ">=3.1.2,<3.6"
pyyaml = ">=6.0.1"
httpx = ">=0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
pre-commit = ">=3.6.0"
pytest-env = ">=1.1.3"
pytest-cov = ">=4.1.0"
pytest-asyncio = ">=0.23.0"
pytest-httpx = "^0.30.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
