[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "psychrochartweb"
version = "0.3.1"
authors = [
    { name="Eugenio Panadero", email="eugenio.panadero@gmail.com" },
]
description = "Psycrochart SVG 'camera' for Home Assistant"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.108.0",
    "uvicorn>=0.25.0",
    "uvloop>=0.19.0",
    "pydantic>=2.5.2",
    "pydantic-settings>=2.1.0",
    "pydantic-extra-types>=2.1.0",
    "python-dotenv>=0.21.0",
    "psychrochart>=0.11.0",
    "matplotlib>=3.8",
    "pyyaml>=6.0.1",
    "httpx>=0.27.0,<1",
]
[project.optional-dependencies]
dev = [
    "pre-commit>=3.6.0",
    "pytest>=7.4.0",
    "pytest-env>=1.1.3",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
]

[project.urls]
Homepage = "https://github.com/azogue/psychrochartweb"
Repository = "https://github.com/azogue/psychrochartweb.git"

[project.scripts]
psychrocam = "psychrochartweb.__main__:main_app"

[tool.ruff]
target-version = "py311"
fix = true
line-length = 79

[tool.ruff.lint]
select = ["A", "ARG", "ASYNC", "B", "BLE", "C", "C4", "E", "F", "FA", "I", "INT", "N", "PIE", "PTH", "RUF", "SIM", "TCH", "TD", "W", "YTT"]
ignore = ["B008", "B904", "B905", "TD002", "TD003", "TD004", "RUF012"]

[tool.ruff.lint.isort]
known-first-party = ["psychrochartweb"]
order-by-type = false

[tool.mypy]
plugins = ["pydantic.mypy"]

follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.coverage.run]
source = ["psychrochartweb"]

[tool.coverage.paths]
source = ["psychrochartweb/"]

[tool.coverage.report]
fail_under = 60
skip_covered = true
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == \"__main__\":",
    "raise NotImplementedError",
]
omit = [
    "src/psychrochartweb/__main__.py",
]

[tool.pytest.ini_options]
minversion = 7.0
testpaths = "tests"
addopts = "-vv -s --cov --cov-report term --cov-report html"
log_cli = true
log_cli_format = "%(asctime)s.%(msecs)03d %(name)s: %(lineno)s %(levelname)s: %(message)s"
log_cli_level = "INFO"
asyncio_mode = "auto"
markers = [
    "local_access: Requires HA connection",
]
env = [
    "D:LOGGING_LEVEL=INFO",
]
